# cipher

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
cli/: cli.py
client-ionic/: package-lock.json  package.json
client-quasar/: README.md  package.json  quasar.conf.js
client-quasar/src/css/: quasar.variables.sass
client-quasar/src/layouts/: AccountLayout.vue  AuthLayout.vue  MainLayout.vue
client-quasar/src/pages/: Account.vue  Auth.vue  Index.vue
client-quasar/src/router/: routes.js
notebooks/: CCXT.ipynb  Oracle.ipynb  Pandas TA.ipynb  Stack Testing.ipynb  Untitled1.ipynb
notebooks/libs/: Alpaca.ipynb  CoinGecko.ipynb  Coinmarketcap.ipynb  GSpread.ipynb  Glassnode.ipynb  Notion.ipynb  Oracle.ipynb  Pandas TA.ipynb  PyPortfolioOpt.ipynb  ccxt.ipynb  finta.ipynb  yFinance.ipynb
server-django/server_django/: settings.py
server-fastapi/: main.py
zappa-functions/: zappa_functions.py  zappa_settings.json
