[tool.poetry]
name = "cypher"
version = "0.1.0"
description = ""
authors = ["Samir Azzouz <s.azzouz97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
ccxt = "^1.41.71"
python-dotenv = "^0.15.0"
six = "^1.15.0"
jupyterlab = "^3.0.7"
pandas-ta = "^0.2.23-beta.0"
pycoingecko = "^1.4.0"
matplotlib = "^3.4.2"
backtrader = "^1.9.76"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
