[tool.poetry]
name = "cypher"
version = "0.1.0"
description = ""
authors = ["Samir Azzouz <s.azzouz97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
python-dotenv = "^0.15.0"
six = "^1.15.0"
jupyterlab = "^3.0.7"
pandas-ta = "^0.2.45-beta.0"
pycoingecko = "^1.4.0"
matplotlib = "^3.4.2"
backtrader = "^1.9.76"
jupyter = "^1.0.0"
ccxt = "^1.51.73"
yfinance = "^0.1.59"
alpaca-trade-api = "^1.2.2"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
gspread = "^3.7.0"
notion = "^0.0.28"
notion-client = "^0.4.0"
mplfinance = "^0.12.7-alpha.17"
finta = "^1.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
